<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    tools:context=".HomeClass"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:scaleType="centerCrop"
        android:src="@drawable/restaurant_sea_image" />

    <TextView
        android:id="@+id/text_home"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/title_home_offer"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_home2"
        android:layout_width="300dp"
        android:layout_height="39dp"
        android:layout_gravity="right|top|left"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/title_home_announcement"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_home3"
        android:layout_width="300dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="96dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/title_home_ramadan"
        android:textAlignment="center"
        android:textSize="20sp" />


</LinearLayout>